--- a/SimpleWeather.UWP/Controls/DetailItem.xaml
+++ b/SimpleWeather.UWP/Controls/DetailItem.xaml
@@ -23,7 +23,7 @@
                 <TextBlock Style="{StaticResource WeatherIcon}" Text="{x:Bind Details.Icon, FallbackValue='&#xf00d;', Mode=OneWay}"
                            RenderTransformOrigin="0.5,0.5">
                     <TextBlock.RenderTransform>
-                        <RotateTransform Angle="{x:Bind Details.IconRotation}" CenterX="0" CenterY="0" />
+                        <RotateTransform Angle="{x:Bind Details.IconRotation, Mode=OneWay}" CenterX="0" CenterY="0" />
                     </TextBlock.RenderTransform>
                 </TextBlock>
             </Viewbox>
