--- a/SimpleWeather.UWP/Controls/Snackbar/SnackbarContent.xaml
+++ b/SimpleWeather.UWP/Controls/Snackbar/SnackbarContent.xaml
@@ -16,11 +16,11 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
-        <TextBlock Text="{x:Bind SnackbarModel.Message}" VerticalAlignment="Center" Style="{ThemeResource CaptionTextBlockStyle}"
+        <TextBlock Text="{x:Bind SnackbarModel.Message, Mode=OneWay}" VerticalAlignment="Center" Style="{ThemeResource CaptionTextBlockStyle}"
                        TextWrapping="WrapWholeWords" FontSize="14" Grid.Column="0" />
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Padding="4,0" Grid.Column="1">
-            <Button x:Name="ActionButton" Content="{x:Bind SnackbarModel.ButtonLabel}" FontWeight="SemiBold"
-                    Visibility="{x:Bind SnackbarModel.ButtonLabel, Converter={StaticResource stringVisibilityConverter}}"
+            <Button x:Name="ActionButton" Content="{x:Bind SnackbarModel.ButtonLabel, Mode=OneWay}" FontWeight="SemiBold"
+                    Visibility="{x:Bind SnackbarModel.ButtonLabel, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
                         Background="Transparent" Foreground="{ThemeResource SnackbarForegroundBrush}"
                         Style="{ThemeResource TextBlockButtonStyle}" />
         </StackPanel>
