--- a/SimpleWeather.UWP/Controls/DetailItem.xaml
+++ b/SimpleWeather.UWP/Controls/DetailItem.xaml
@@ -13,23 +13,24 @@
     <Border x:Name="ItemBorder" Margin="15" CornerRadius="2.5" BorderThickness="1" BorderBrush="#40D3D3D3" Background="#B3FFFFFF">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <TextBlock Name="DetailLabel" Text="{x:Bind Details.Label, FallbackValue='Label', Mode=OneWay}" Grid.Row="0"
-                       HorizontalAlignment="Center" VerticalAlignment="Center" />
-            <Viewbox Name="WeatherBox" Grid.Row="1" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center">
+                       HorizontalAlignment="Center" VerticalAlignment="Center" Padding="8" />
+            <Viewbox Name="WeatherBox" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock Style="{StaticResource WeatherIcon}" Text="{x:Bind Details.Icon, FallbackValue='&#xf00d;', Mode=OneWay}"
-                           RenderTransformOrigin="0.5,0.5">
+                           RenderTransformOrigin="0.5,0.5" TextLineBounds="Tight" Width="50">
                     <TextBlock.RenderTransform>
-                        <RotateTransform Angle="{x:Bind Details.IconRotation, Mode=OneWay}" CenterX="0" CenterY="0" />
+                        <RotateTransform Angle="{x:Bind Details.IconRotation, Mode=OneWay}" />
                     </TextBlock.RenderTransform>
                 </TextBlock>
             </Viewbox>
             <TextBlock Name="DetailValue" Grid.Row="2" Text="{x:Bind Details.Value, FallbackValue=' 50.00 in', Mode=OneWay}"
                        FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons"
-                       HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="WrapWholeWords"/>
+                       HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="WrapWholeWords"
+                       Padding="8" />
         </Grid>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
@@ -39,7 +40,6 @@
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="DetailLabel.FontSize" Value="13"/>
-                        <Setter Target="WeatherBox.Height" Value="30"/>
                         <Setter Target="DetailValue.FontSize" Value="13"/>
                         <Setter Target="Control.Height" Value="150"/>
                         <Setter Target="Control.Width" Value="150"/>
@@ -51,7 +51,6 @@
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="DetailLabel.FontSize" Value="15"/>
-                        <Setter Target="WeatherBox.Height" Value="40"/>
                         <Setter Target="DetailValue.FontSize" Value="15"/>
                         <Setter Target="Control.Height" Value="175"/>
                         <Setter Target="Control.Width" Value="175"/>
