--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -13,7 +13,7 @@
     xmlns:utils="using:SimpleWeather.Utils"
     mc:Ignorable="d"
     d:DesignHeight="1600"
-    d:DesignWidth="900"
+    d:DesignWidth="1600"
     DataContext="{x:Bind WeatherView}">
 
     <Page.Resources>
@@ -122,83 +122,6 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <Style x:Key="Divider" TargetType="Border">
-            <Setter Property="BorderThickness" Value="0.5" />
-            <Setter Property="Opacity" Value="0.2" />
-            <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
-        </Style>
-        <Style x:Key="SectionLabelStyle" TargetType="toolkitControls:HeaderedContentControl">
-            <Setter Property="HorizontalContentAlignment" Value="Left" />
-            <Setter Property="VerticalContentAlignment" Value="Top" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="toolkitControls:HeaderedContentControl">
-                        <Grid>
-                            <Grid.Resources>
-                                <Style x:Key="SectionLabel" TargetType="ContentPresenter">
-                                    <Setter Property="Padding" Value="15,10" />
-                                    <Setter Property="FontSize" Value="18" />
-                                    <Setter Property="FontWeight" Value="SemiBold" />
-                                    <Setter Property="Foreground" Value="White" />
-                                    <Setter Property="HorizontalAlignment" Value="Left" />
-                                    <Setter Property="VerticalAlignment" Value="Top" />
-                                </Style>
-                            </Grid.Resources>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <ContentPresenter x:Name="HeaderPresenter"
-                                          x:DeferLoadStrategy="Lazy"
-                                          Content="{TemplateBinding Header}"
-                                          ContentTemplate="{TemplateBinding HeaderTemplate}"
-                                          Grid.ColumnSpan="2"
-                                          Style="{ThemeResource SectionLabel}" />
-                            <ContentPresenter x:Name="ContentPresenter"
-                                          Grid.ColumnSpan="2"
-                                          Grid.Row="1"
-                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-                            <VisualStateManager.VisualStateGroups>
-                                <VisualStateGroup x:Name="OrientationStates">
-                                    <VisualState x:Name="Vertical" />
-                                    <VisualState x:Name="Horizontal">
-                                        <VisualState.Setters>
-                                            <Setter Target="HeaderPresenter.(Grid.ColumnSpan)" Value="1" />
-                                            <Setter Target="ContentPresenter.(Grid.ColumnSpan)" Value="1" />
-                                            <Setter Target="ContentPresenter.(Grid.Column)" Value="1" />
-                                            <Setter Target="HeaderPresenter.(Grid.Row)" Value="1" />
-                                        </VisualState.Setters>
-                                    </VisualState>
-                                </VisualStateGroup>
-                                <VisualStateGroup>
-                                    <VisualState>
-                                        <VisualState.StateTriggers>
-                                            <AdaptiveTrigger MinWindowHeight="691" />
-                                        </VisualState.StateTriggers>
-                                        <VisualState.Setters>
-                                            <Setter Target="HeaderPresenter.FontSize" Value="18" />
-                                        </VisualState.Setters>
-                                    </VisualState>
-                                    <VisualState>
-                                        <VisualState.StateTriggers>
-                                            <AdaptiveTrigger MinWindowHeight="0" />
-                                        </VisualState.StateTriggers>
-                                        <VisualState.Setters>
-                                            <Setter Target="HeaderPresenter.FontSize" Value="16" />
-                                        </VisualState.Setters>
-                                    </VisualState>
-                                </VisualStateGroup>
-                            </VisualStateManager.VisualStateGroups>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
     </Page.Resources>
 
     <Grid x:Name="MainGrid" Background="{ThemeResource SystemAccentColor}" SizeChanged="MainGrid_SizeChanged">
@@ -221,7 +144,7 @@
         </Grid>
         <ScrollViewer x:Name="MainViewer" VerticalScrollMode="Auto" ViewChanged="MainViewer_ViewChanged" Padding="16,0"
                       x:Load="{x:Bind WeatherView.Location, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}">
-            <StackPanel RequestedTheme="{x:Bind WeatherView.BackgroundTheme, Mode=OneWay}">
+            <StackPanel RequestedTheme="{x:Bind WeatherView.BackgroundTheme, Mode=OneWay}" MaxWidth="1280">
                 <Grid x:Name="ConditionPanel">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -229,16 +152,17 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <TextBlock Name="Location" Text="{x:Bind WeatherView.Location, FallbackValue='New York, NY', Mode=OneWay}"
-                               FontSize="28" FontWeight="Normal" TextAlignment="Center"
+                               FontSize="28" FontWeight="Medium" TextAlignment="Center"
                                Margin="0,10,0,0" Grid.Row="0" MaxLines="2"
                                TextWrapping="WrapWholeWords" TextTrimming="CharacterEllipsis"
                                Transitions="{StaticResource TextTransitions}" />
                     <TextBlock Name="UpdateDate" Text="{x:Bind WeatherView.UpdateDate, FallbackValue='Updated on 11:12 PM', Mode=OneWay}"
                                HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="1"
-                               Padding="5" Transitions="{StaticResource TextTransitions}" FontSize="12" />
+                               Padding="5" Transitions="{StaticResource TextTransitions}" FontSize="12" FontWeight="Medium" />
                     <Button x:Name="AlertButton"
                             Height="30" Padding="0" Background="OrangeRed"
                             HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch"
@@ -275,14 +199,19 @@
                         <TextBlock x:Name="WeatherIcon" Style="{ThemeResource WeatherIcon}" Text="{x:Bind WeatherView.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" />
                     </Viewbox>
                     <TextBlock Name="CurCondition" Text="{x:Bind WeatherView.CurCondition, FallbackValue='Sunny', Mode=OneWay}"
-                               FontSize="24" Transitions="{StaticResource TextTransitions}"
+                               FontSize="24" FontWeight="Medium" Transitions="{StaticResource TextTransitions}"
                                HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="4" />
                     <TextBlock Name="CurTemp" Text="{x:Bind WeatherView.CurTemp, FallbackValue='70&#xF045;', Mode=OneWay}"
-                                   FontSize="24" Style="{ThemeResource WeatherIcon}"
-                                   HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5,0,0,0" Grid.Row="5" />
-                    <TextBlock Padding="5" FontSize="11" VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                               FontSize="24" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
+                               HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5,0,0,0" Grid.Row="5" />
+                    <TextBlock FontSize="24" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
+                               HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5,0,0,0"
+                               Grid.Row="6" Visibility="{x:Bind WeatherView.HiTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
+                        <Span><Run Text="{x:Bind WeatherView.HiTemp, Mode=OneWay}" /><Run Text=" &#xf058;"/><Run Text=" | "/><Run Text="{x:Bind WeatherView.LoTemp, Mode=OneWay}" /><Run Text=" &#xf044;"/></Span>
+                    </TextBlock>
+                    <TextBlock Padding="5" FontSize="11" FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"
                                Visibility="{x:Bind WeatherView.ImageData, Converter={StaticResource stringVisibilityConverter}, Mode=OneWay}"
-                               Grid.Row="5">
+                               Grid.Row="7">
                             <Span xml:space="preserve"><Run Text="Photo by " /><Hyperlink NavigateUri="{x:Bind WeatherView.ImageData.ArtistLink, Mode=OneWay}"><Run Text="{x:Bind WeatherView.ImageData.ArtistName, Mode=OneWay}" /></Hyperlink><Run Text=" on " /><Hyperlink NavigateUri="{x:Bind WeatherView.ImageData.SiteLink, Mode=OneWay}"><Run Text="{x:Bind WeatherView.ImageData.SiteName, Mode=OneWay}" /></Hyperlink></Span>
                     </TextBlock>
                 </Grid>
@@ -298,12 +227,12 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <Button x:Name="LeftButton" Click="LeftButton_Click" Grid.Column="0"
-                                IsEnabled="{x:Bind helpers:ScrollViewerHelper.CanScrollToStart(ForecastGraphPanel.ScrollViewer.HorizontalOffset), Mode=OneWay}"
-                                Style="{ThemeResource LeftArrowButton}" />
+                            <Button x:Name="LeftButton" Click="LeftButton_Click" Grid.Column="0" 
+                                    IsEnabled="{x:Bind helpers:ScrollViewerHelper.CanScrollToStart(ForecastGraphPanel.ScrollViewer.HorizontalOffset), Mode=OneWay}"
+                                    Style="{ThemeResource LeftArrowButton}" />
                             <Button x:Name="RightButton" Click="RightButton_Click" Grid.Column="2"
-                                IsEnabled="{x:Bind helpers:ScrollViewerHelper.CanScrollToEnd(ForecastGraphPanel.ScrollViewer.HorizontalOffset, ForecastGraphPanel.ScrollViewer.ViewportWidth, ForecastGraphPanel.ScrollViewer.ExtentWidth), Mode=OneWay}"
-                                Style="{ThemeResource RightArrowButton}" />
+                                    IsEnabled="{x:Bind helpers:ScrollViewerHelper.CanScrollToEnd(ForecastGraphPanel.ScrollViewer.HorizontalOffset, ForecastGraphPanel.ScrollViewer.ViewportWidth, ForecastGraphPanel.ScrollViewer.ExtentWidth), Mode=OneWay}"
+                                    Style="{ThemeResource RightArrowButton}" />
                             <localcontrols:ForecastGraphPanel x:Name="ForecastGraphPanel" Grid.Column="1"
                                                               GraphViewTapped="LineView_Tapped"
                                                               Forecasts="{x:Bind WeatherView.Forecasts, Mode=OneWay}" />
@@ -323,26 +252,26 @@
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
                             <Button x:Name="HourlyLeftButton" Click="LeftButton_Click"
-                                IsEnabled="{x:Bind helpers:ScrollViewerHelper.CanScrollToStart(HourlyGraphPanel.ScrollViewer.HorizontalOffset), Mode=OneWay}"
-                                Style="{ThemeResource LeftArrowButton}" Grid.Column="0" />
+                                    IsEnabled="{x:Bind helpers:ScrollViewerHelper.CanScrollToStart(HourlyGraphPanel.ScrollViewer.HorizontalOffset), Mode=OneWay}"
+                                    Style="{ThemeResource LeftArrowButton}" Grid.Column="0" />
                             <Button x:Name="HourlyRightButton" Click="RightButton_Click"
-                                IsEnabled="{x:Bind helpers:ScrollViewerHelper.CanScrollToEnd(HourlyGraphPanel.ScrollViewer.HorizontalOffset, HourlyGraphPanel.ScrollViewer.ViewportWidth, HourlyGraphPanel.ScrollViewer.ExtentWidth), Mode=OneWay}"
-                                Style="{ThemeResource RightArrowButton}" Grid.Column="2" />
+                                    IsEnabled="{x:Bind helpers:ScrollViewerHelper.CanScrollToEnd(HourlyGraphPanel.ScrollViewer.HorizontalOffset, HourlyGraphPanel.ScrollViewer.ViewportWidth, HourlyGraphPanel.ScrollViewer.ExtentWidth), Mode=OneWay}"
+                                    Style="{ThemeResource RightArrowButton}" Grid.Column="2" />
                             <localcontrols:ForecastGraphPanel x:Name="HourlyGraphPanel" Grid.Column="1"
                                                               GraphViewTapped="LineView_Tapped"
                                                               Forecasts="{x:Bind WeatherView.HourlyForecasts, Mode=OneWay}" />
                         </Grid>
                     </toolkitControls:HeaderedContentControl>
                 </StackPanel>
-                <StackPanel x:Name="DetailsContainer" Margin="0,0,0,25"
-                            x:Load="{x:Bind WeatherView.WeatherDetails, Mode=OneWay, Converter={StaticResource collectionBooleanConverter}}"
-                            Loaded="DeferedControl_Loaded">
+                <StackPanel x:Name="DetailsContainer" Margin="0,0,0,25">
                     <Border Style="{ThemeResource Divider}" />
                     <toolkitControls:HeaderedContentControl Style="{ThemeResource SectionLabelStyle}"
                                                             HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"
                                                             x:Uid="Label_Details" Header="Details">
                         <ItemsControl x:Name="DetailsPanel" HorizontalAlignment="Center" HorizontalContentAlignment="Center"
-                                      ItemsSource="{x:Bind WeatherView.WeatherDetails, Mode=OneWay}">
+                                      ItemsSource="{x:Bind WeatherView.WeatherDetails, Mode=OneWay}"
+                                      x:Load="{x:Bind WeatherView.WeatherDetails, Mode=OneWay, Converter={StaticResource collectionBooleanConverter}}"
+                                      Loaded="DeferedControl_Loaded">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate x:DataType="controls:DetailItemViewModel">
                                     <Grid>
@@ -358,6 +287,23 @@
                             </ItemsControl.ItemsPanel>
                         </ItemsControl>
                     </toolkitControls:HeaderedContentControl>
+                    <toolkitControls:UniformGrid x:Name="DetailsGrid" Orientation="Horizontal">
+                        <localcontrols:UVControl x:Name="UVContrl"
+                                                 x:Load="{x:Bind WeatherView.UVIndex, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
+                                                 Visibility="{x:Bind WeatherView.UVIndex, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
+                                                 DataContext="{x:Bind WeatherView.UVIndex, Mode=OneWay}" Margin="10,5"
+                                                 MinWidth="340" Grid.ColumnSpan="1" />
+                        <localcontrols:BeaufortControl x:Name="BeaufControl"
+                                                       x:Load="{x:Bind WeatherView.Beaufort, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
+                                                       Visibility="{x:Bind WeatherView.Beaufort, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
+                                                       DataContext="{x:Bind WeatherView.Beaufort, Mode=OneWay}" Margin="10,5"
+                                                       MinWidth="340" Grid.ColumnSpan="1" />
+                        <localcontrols:MoonPhaseControl x:Name="MoonControl"
+                                                        x:Load="{x:Bind WeatherView.MoonPhase, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
+                                                        Visibility="{x:Bind WeatherView.MoonPhase, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
+                                                        DataContext="{x:Bind WeatherView.MoonPhase, Mode=OneWay}" Margin="10,5"
+                                                        MinWidth="450" Grid.ColumnSpan="2" />
+                    </toolkitControls:UniformGrid>
                 </StackPanel>
                 <StackPanel x:Name="SunPhaseContainer" Margin="0,0,0,25"
                             x:Load="{x:Bind WeatherView.Sunrise, Converter={StaticResource stringBooleanConverter}, Mode=OneWay}"
