SimpleWeather: add support for Air Quality index
* Add Air Quality Index (AQI) control
* Adjust UI for other controls

--- a/SimpleWeather.UWP/Controls/BeaufortControl.xaml
+++ b/SimpleWeather.UWP/Controls/BeaufortControl.xaml
@@ -15,21 +15,32 @@
                 <TextBlock Text="{x:Bind ViewModel.Beaufort.Label, Mode=OneWay, FallbackValue='Beaufort'}"
                            FontSize="15" />
             </toolkitControls:HeaderedContentControl.Header>
-            <StackPanel Padding="15,0">
-                <StackPanel Orientation="Horizontal" Padding="15,0">
-                    <TextBlock Text="{x:Bind ViewModel.Beaufort.Icon, Mode=OneWay}" Style="{StaticResource WeatherIcon}"
-                               FontSize="32" Padding="5" Width="50">
-                    </TextBlock>
-                    <TextBlock Text="{x:Bind ViewModel.Beaufort.Value, Mode=OneWay}"
-                               FontSize="18" Padding="5" VerticalAlignment="Center" />
-                </StackPanel>
-                <ProgressBar Height="5" Value="{x:Bind ViewModel.BeaufortScaleProgress, Mode=OneWay}" Maximum="100" Background="DimGray"
-                             Margin="15,0">
+            <RelativePanel>
+                <TextBlock x:Name="BeaufortIcon" Text="{x:Bind ViewModel.Beaufort.Icon, Mode=OneWay, FallbackValue='&#xf0c2;'}"
+                           Foreground="White" FontSize="32"
+                           Width="75" Padding="5" VerticalAlignment="Center"
+                           Style="{StaticResource WeatherIcon}"
+                           RelativePanel.AlignTopWithPanel="True"
+                           RelativePanel.AlignLeftWithPanel="True"
+                           RelativePanel.Above="BeaufortProgressBar" />
+                <TextBlock x:Name="BeaufortDescription" TextLineBounds="Tight"
+                           Foreground="White" FontSize="18"
+                           Padding="5" VerticalAlignment="Center"
+                           Text="{x:Bind ViewModel.Beaufort.Value, Mode=OneWay, FallbackValue='Violent Storm'}"
+                           RelativePanel.RightOf="BeaufortIcon"
+                           RelativePanel.AlignTopWithPanel="True"
+                           RelativePanel.AlignRightWithPanel="True"
+                           RelativePanel.Above="BeaufortProgressBar" />
+                <ProgressBar x:Name="BeaufortProgressBar" Height="5" Value="{x:Bind ViewModel.BeaufortScaleProgress, Mode=OneWay, FallbackValue='66'}" Maximum="100" Background="DimGray"
+                             Margin="15,5"
+                             RelativePanel.AlignBottomWithPanel="True"
+                             RelativePanel.AlignLeftWithPanel="True"
+                             RelativePanel.AlignRightWithPanel="True">
                     <ProgressBar.Foreground>
-                        <SolidColorBrush Color="{x:Bind ViewModel.BeaufortScaleProgressColor, Mode=OneWay}" />
+                        <SolidColorBrush Color="{x:Bind ViewModel.BeaufortScaleProgressColor, Mode=OneWay, FallbackValue='Maroon'}" />
                     </ProgressBar.Foreground>
                 </ProgressBar>
-            </StackPanel>
+            </RelativePanel>
         </toolkitControls:HeaderedContentControl>
     </StackPanel>
 </UserControl>
