--- a/SimpleWeather.UWP/Controls/UVControl.xaml
+++ b/SimpleWeather.UWP/Controls/UVControl.xaml
@@ -6,9 +6,7 @@
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="100"
-    d:DesignWidth="250">
+    mc:Ignorable="d">
 
     <StackPanel>
         <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch" 
@@ -17,24 +15,33 @@
                 <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay, FallbackValue='UV Index'}"
                            FontSize="15" />
             </toolkitControls:HeaderedContentControl.Header>
-            <StackPanel Padding="15,0">
-                <StackPanel Orientation="Horizontal" Padding="15,0">
-                    <TextBlock Text="{x:Bind ViewModel.Icon, Mode=OneWay}"
-                               Foreground="White" FontSize="32"
-                               Width="50" Padding="5" VerticalAlignment="Center"
-                               Style="{StaticResource WeatherIcon}" />
-                    <TextBlock TextLineBounds="Tight" Foreground="White" FontSize="18"
-                               Padding="5" VerticalAlignment="Center">
-                        <Span><Run Text="{x:Bind ViewModel.Index, Mode=OneWay}" /><Run Text=", " /><Run Text="{x:Bind ViewModel.Description, Mode=OneWay}" /></Span>
-                    </TextBlock>
-                </StackPanel>
-                <ProgressBar Height="5" Value="{x:Bind ViewModel.Progress, Mode=OneWay}" Maximum="100" Background="DimGray"
-                             Margin="15,0">
+            <RelativePanel>
+                <TextBlock x:Name="UVIcon" Text="{x:Bind ViewModel.Icon, Mode=OneWay, FallbackValue='&#xf00d;'}"
+                           Foreground="White" FontSize="32"
+                           Width="75" Padding="5" VerticalAlignment="Center"
+                           Style="{StaticResource WeatherIcon}"
+                           RelativePanel.AlignTopWithPanel="True"
+                           RelativePanel.AlignLeftWithPanel="True"
+                           RelativePanel.Above="UVProgressBar" />
+                <TextBlock x:Name="UVDescription" TextLineBounds="Tight"
+                           Foreground="White" FontSize="18"
+                           Padding="5" VerticalAlignment="Center"
+                           RelativePanel.RightOf="UVIcon"
+                           RelativePanel.AlignTopWithPanel="True"
+                           RelativePanel.AlignRightWithPanel="True"
+                           RelativePanel.Above="UVProgressBar">
+                        <Span><Run Text="{x:Bind ViewModel.Index, Mode=OneWay, FallbackValue='9'}" /><Run Text=", " /><Run Text="{x:Bind ViewModel.Description, Mode=OneWay, FallbackValue='Very High'}" /></Span>
+                </TextBlock>
+                <ProgressBar x:Name="UVProgressBar" Height="5" Value="{x:Bind ViewModel.Progress, Mode=OneWay, FallbackValue='66'}" Maximum="100" Background="DimGray"
+                             Margin="15,5"
+                             RelativePanel.AlignBottomWithPanel="True"
+                             RelativePanel.AlignLeftWithPanel="True"
+                             RelativePanel.AlignRightWithPanel="True">
                     <ProgressBar.Foreground>
-                        <SolidColorBrush Color="{x:Bind ViewModel.ProgressColor, Mode=OneWay}" />
+                        <SolidColorBrush Color="{x:Bind ViewModel.ProgressColor, Mode=OneWay, FallbackValue='Maroon'}" />
                     </ProgressBar.Foreground>
                 </ProgressBar>
-            </StackPanel>
+            </RelativePanel>
         </toolkitControls:HeaderedContentControl>
     </StackPanel>
 </UserControl>
