SimpleWeather: remove weather backgrounds from package
* Image assets take up a good chunk of space in the package
* I want to start factoring out non-essential data like this from the actual package and download and store/cache this once the app is running
* Use Firebase to share with Android app
* Move image assets to Firebase Storage
* Store image metadata and links in Cloud Firestore
* Add Firestore snapshot "cache" implementation to avoid calling database everytime
* Cache images from Firestore on-demand to avoid downloading everytime
* Start of remote configuration

--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -16,7 +16,7 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition x:Name="IconColumn" Width="70" />
         </Grid.ColumnDefinitions>
-        <toolkitControls:ImageEx CachingStrategy="Custom" IsCacheEnabled="True" DecodePixelWidth="1080" Source="{x:Bind ViewModel.BackgroundURI, Mode=OneWay}" Foreground="White" 
+        <toolkitControls:ImageEx CachingStrategy="Custom" IsCacheEnabled="True" DecodePixelWidth="1080" Source="{x:Bind ViewModel.ImageData.ImageUri, Mode=OneWay}" Foreground="White" 
                                  Stretch="UniformToFill" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{ThemeResource ImageExProgressStyle}" />
         <Grid Grid.ColumnSpan="3">
             <Grid.Background>
